Added clear button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
           rows="20"
           cols="40"
         ></textarea>
-        <button id="button">Get items</button>
+        <div>
+          <button id="getItems">Get items</button>
+          <button id="clear">Clear</button>
+        </div>
       </section>
 
       <section class="output-section">
